<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_kashf"
            android:icon="@drawable/ic_action_format_list_bulleted"
            android:title="@string/kashf" />
        <item
            android:id="@+id/nav_absent"
            android:icon="@drawable/ic_action_playlist_add_check"
            android:title="@string/absent" />
        <item
            android:id="@+id/nav_eftkad_list"
            android:icon="@drawable/ic_action_directions_walk"
            android:title="@string/eftkad_list" />
        <item
            android:id="@+id/nav_birthdates"
            android:icon="@drawable/ic_action_cake"
            android:title="@string/birthdates" />
    </group>

    <group>
        <item
            android:id="@+id/nav_export_excel"
            android:icon="@drawable/ic_action_exit_to_app"
            android:title="@string/export_excel" />
    </group>
    <group>
        <item
            android:id="@+id/nav_import_excel"
            android:icon="@drawable/ic_action_exit_to_app"
            android:title="@string/import_excel" />
    </group>

    <group>
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_action_exit_to_app"
            android:title="@string/signout" />
    </group>

</menu>
